--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>UdaciFeeds</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="Karla Fernandes" />
+	<meta name="description" lang="en" content="How to use Jasmine to write a number of tests against a pre-existing application" />
 
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,700">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/icomoon.css">
-        <link rel="stylesheet" href="css/style.css">
+	<title>Feed Reader Testing</title>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,700">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/style.css">
 
-        <link rel="stylesheet" href="jasmine/lib/jasmine-2.1.2/jasmine.css">
+    <link rel="stylesheet" href="jasmine/lib/jasmine-2.1.2/jasmine.css">
 
-        <script src="jasmine/lib/jasmine-2.1.2/jasmine.js"></script>
-        <script src="jasmine/lib/jasmine-2.1.2/jasmine-html.js"></script>
-        <script src="jasmine/lib/jasmine-2.1.2/boot.js"></script>
-    </head>
+    <script src="jasmine/lib/jasmine-2.1.2/jasmine.js"></script>
+    <script src="jasmine/lib/jasmine-2.1.2/jasmine-html.js"></script>
+    <script src="jasmine/lib/jasmine-2.1.2/boot.js"></script>
+</head>
     <body class="menu-hidden">
         <div class="header">
             <a href="#" class="menu-icon-link">
